--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,12 +42,15 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: |
-        echo "machine api.heroku.com" > ~/.netrc
-        echo "  login ${{ secrets.HEROKU_EMAIL }}" >> ~/.netrc
-        echo "  password ${{ secrets.HEROKU_API_KEY }}" >> ~/.netrc
-        echo "machine git.heroku.com" >> ~/.netrc
-        echo "  login ${{ secrets.HEROKU_EMAIL }}" >> ~/.netrc
-        echo "  password ${{ secrets.HEROKU_API_KEY }}" >> ~/.netrc
+        echo "doing login to heroku"
+      #echo "machine api.heroku.com" > ~/.netrc
+      #echo "  login ${{ secrets.HEROKU_EMAIL }}" >> ~/.netrc
+      #echo "  password ${{ secrets.HEROKU_API_KEY }}" >> ~/.netrc
+      #echo "machine git.heroku.com" >> ~/.netrc
+      #echo "  login ${{ secrets.HEROKU_EMAIL }}" >> ~/.netrc
+      #echo "  password ${{ secrets.HEROKU_API_KEY }}" >> ~/.netrc
 
     - name: Deploy to Heroku
-      run: git push https://git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git HEAD:main
+      run: |
+       echo "doing deploy to heroku"
+      #git push https://git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git HEAD:main
